
161215 Martin Mann :
 * AccessibilityConstraint :
   * construction : bugfix reverse handling
 * CommandLineParsing : 
   * getSeedConstraint()
     + now with energy argument arguments to access seed lengths
     + reverses seed ranges for seq2
 * IndexRangeList :
   * List now std::list (before std::vector)
   + covers(range) + tests
   + reverse() + tests : reverses the indices and range order
 * PredictorMfe2d :
 * PredictorMfe2dSeed :
   * predict() : bugfix : throw without "new"
 * Predictor*Seed :
   * bugfix : uses now SeedHandlerIdxOffset instead of SeedHandler
   + seed handler offset setup
 * RnaSequence :
   * areComplementary() : bugfix : throw without "new"
 * SeedConstraint :
   * members not const (otherwise getter not needed)
   + getRanges*() : write access for ranges
 * SeedHandler : 
   * public functions virtual
   + offset* : index offset (needed for restricted matrices)
   * fillSeed() :
     * bugfix : sanity checks corrected
     * bugfix : index offset was missing
   * traceBack() :
     * bugfix : index offset was missing
 + SeedHandlerIdxOffset : index shift wrapper for SeedHandler

161214 Martin Mann :
 * intaRNA :
   * query/target enumeration swapped, such that seq1 == target in prediction
     and output
 * OutputConstraint : data structure defining all output constraints
   + enum ReportOverlap : 4 possibilities where overlapping is allowed
   + reportMax : max number of (suboptimal) interactions to report
   + reportOverlap : the overlap constraint for reported interactions
   + deltaE : maximal energy difference to mfe to be reported
 * Predictor :
   * reportMax/reportNonOverlapping replaced by outConstraint
     * predict()
     * initOptima()
     * reportOptima()
 * IndexRange :
   + regex : regex to match valid string encoding 
   + fromString() : parse string encoding
   + operator == ()
   + operator != ()
   * operator << () : now regex conform
 * IndexRangeList :
   + regex : regex to match valid string encoding 